--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ on:
     # Daily at 09:37
     - cron: '37 9 * * *'
 
+env:
+  AWS_REGION: us-east-2
+
 jobs:
   build:
     name: Build
@@ -21,9 +24,9 @@ jobs:
       fail-fast: false
       matrix:
         python:
-          - name: CPython 3.9
-            version: 3.9
-            action: 3.9
+          - name: CPython 3.7.9
+            version: 3.7.9
+            action: 3.7.9
         arch:
           - name: x64
             action: x64
@@ -39,16 +42,35 @@ jobs:
         with:
           python-version: ${{ matrix.python.action }}
           architecture: ${{ matrix.arch.action }}
-
-      - name: boots
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+      - name: Install Poetry and Venv
         run: |
-          python boots.py ensure --group build
+          python3 -m ensurepip
+          python3 -m pip install --upgrade pip
+          python3 -m pip install poetry
+          poetry config virtualenvs.in-project true
+          poetry config virtualenvs.path .
+
+          #Setup AWS Connection
+          poetry config repositories.epc-power https://epc-power-us-${{ secrets.AWS_ACCOUNT_ID }}.d.codeartifact.us-east-2.amazonaws.com/pypi/epc-power/
+          export CODEARTIFACT_AUTH_TOKEN=`aws codeartifact get-authorization-token --domain epc-power-us --domain-owner ${{ secrets.AWS_ACCOUNT_ID }} --query authorizationToken --output text`
+          poetry config http-basic.epc-power aws $CODEARTIFACT_AUTH_TOKEN
+
+          poetry config --list
+
+          poetry install
 
       - name: Package executable
         run: |
-          # help versioneer and pyinstaller get along
-          venv/Scripts/pip install .
-          venv/Scripts/pyinstaller pyinstaller.spec
+          # set the versioning
+          poetry run poetry-dynamic-versioning
+          poetry run pyinstaller pyinstaller.spec
+          poetry build
 
       - name: Check and report executable version
         shell: python
@@ -59,7 +81,7 @@ jobs:
           import sys
 
           completed_process = subprocess.run(
-              ["dist/epcsunspecdemo", "--version"],
+              ["dist/sunspecdemo", "--version"],
               capture_output=True,
               check=True,
           )
@@ -70,11 +92,16 @@ jobs:
           assert unknown not in completed_process.stdout, f"{unknown!r} found in above stdout"
           assert b"" == completed_process.stderr, f"stderr not empty: {completed_process.stderr!r}"
 
+      - name: Publish executable
+        #only run if a new tag is created
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          poetry publish --repository epc-power
       - name: Archive executable
         uses: actions/upload-artifact@v2
         with:
-          name: executable
-          path: dist/epcsunspecdemo.exe
+          name: Sunspecdemo_executable
+          path: dist/sunspecdemo.exe
 
   all:
     name: All
