pin poetry to 1.1.15

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           python3 -m ensurepip
           python3 -m pip install --upgrade pip
-          python3 -m pip install poetry
+          python3 -m pip install poetry==1.1.15
           poetry config virtualenvs.in-project true
           poetry config virtualenvs.path .
 
