--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,11 @@ readme = "README.rst"
 [tool.poetry-dynamic-versioning]
 enable = true
 vcs = "git"
-style = "semver"
+style = "pep440"
 
 [tool.poetry-dynamic-versioning.substitution]
 #poetry auto substitution doesnt cover init files 2 directories past root
-files = ["src/sunspecdemo/__init__.py"]
+#files = ["src/sunspecdemo/__init__.py"]
 
 [tool.poetry.dependencies]
 python = ">=3.7.9,<3.11"
@@ -42,5 +42,5 @@ pyinstaller = "4.4"
 sunspecdemo = 'sunspecdemo.cli:cli'
 
 [build-system]
-requires = ["setuptools", "poetry-core>=1.0.0", "poetry-dynamic-versioning",]
+requires = ["setuptools", "poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0",]
 build-backend = "poetry_dynamic_versioning.backend"
