--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ style = "pep440"
 
 [tool.poetry-dynamic-versioning.substitution]
 #poetry auto substitution doesnt cover init files 2 directories past root
-#files = ["src/sunspecdemo/__init__.py"]
+files = ["src/sunspecdemo/__init__.py"]
 
 [tool.poetry.dependencies]
 python = ">=3.7.9,<3.11"
