--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,5 +41,10 @@ pyinstaller = "4.4"
 sunspecdemo = 'sunspecdemo.cli:cli'
 
 [build-system]
-requires = ["setuptools", "poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0",]
+requires = [
+    "setuptools", 
+    "poetry-core>=1.0.0", 
+    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
+    
+]
 build-backend = "poetry_dynamic_versioning.backend"
