--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,12 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - '**' #double star includes a '/'.  single star doesnt match a '/'
     tags:
       - v*
   pull_request:
     branches:
-      - "**"
+      - '**'
   schedule:
     # Daily at 09:37
     - cron: '37 9 * * *'
@@ -24,9 +24,9 @@ jobs:
       fail-fast: false
       matrix:
         python:
-          - name: CPython 3.7.9
-            version: 3.7.9
-            action: 3.7.9
+          - name: CPython 3.8
+            version: 3.8
+            action: 3.8
         arch:
           - name: x64
             action: x64
